--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,89 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'assets/styles/color.variable';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.flex-spacer {
+	flex: 1 1 auto;
+}
+
+.color-theme {
+	color: $theme-color !important;
+}
+
+.color-black {
+	color: $black !important;
+}
+
+.bg-white {
+	background-color: $white !important;
+}
+
+button {
+	height: 40px !important;
+	font-size: 14px !important;
+	border-radius: 12px !important;
+	color: $theme-color !important;
+	&.primary-button {
+		background-color: $primary !important;
+		@extend .color-theme;
+	}
+	&.secondary-button {
+		background-color: $secondary !important;
+		@extend .color-black;
+	}
+	&:disabled {
+		background-color: $secondary !important;
+		color: $disabled !important;
+	}
+}
+
+.navbar {
+	border-bottom: 1px solid $secondary !important;
+}
+
+.d-flex {
+	display: flex;
+}
+
+.gap-10 {
+	gap: 10px;
+}
+
+.px-40 {
+	padding-left: 40px !important;
+	padding-right: 40px !important;
+}
+
+.align-center {
+	align-items: center;
+}
+
+.justify-right {
+	justify-content: right;
+}
+
+.w-full {
+	width: 100%;
+}
+
+.cursor-pointer {
+	cursor: pointer;
+}
+
+.welcome-text {
+	font-size: 18px;
+}
+
+.page-center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+
+.text-center {
+	text-align: center;
+}
