--- a/src/assets/styles/color.variable.scss
+++ b/src/assets/styles/color.variable.scss
@@ -1,6 +1,7 @@
 $theme-color: #F7FAFA;
 $primary: #338CE5;
 $secondary: #E8EDF2;
+$secondary-dark: #4F7396;
 $black: #0D141C;
 $white: #FFFFFF;
 $disabled: #7f95ab;
